modified rofi, added qutebrowser config

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,2 +1,5 @@
 [Settings]
+#gtk-icon-theme-name=oomox-user_theme
+#gtk-theme-name=oomox-user_theme
+gtk-font-name=IBM 3270 11
 gtk-cursor-theme-name=Numix-Cursor
